[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.64",
    "dotenv>=0.9.9",
    "fastapi>=0.132.0",
    "fastmcp>=3.1.0",
    "langchain>=1.2.12",
    "langchain-aws>=1.4.0",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.1.1",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
